# DeepResearch

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  pyproject.toml
.github/workflows/: test.yml
deepresearch/: agent.py  config.py  main.py
deepresearch-py/: pyproject.toml
deepresearch-py/deepresearch/: agent.py  config.py  main.py  types.py
deepresearch-py/deepresearch/tools/: __init__.py  brave_search.py  dedup.py  error_analyzer.py  evaluator.py  query_rewriter.py  read.py
deepresearch-py/deepresearch/utils/: action_tracker.py
deepresearch/tools/: brave_search.py  dedup.py  error_analyzer.py  evaluator.py  jina_search.py  query_rewriter.py  read.py
deepresearch/utils/: action_tracker.py  token_tracker.py
