[tool.poetry]
name = "deepresearch"
version = "0.1.0"
description = "AI-powered research assistant using FastAPI and Python"
authors = ["Devin <devin@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "*"
python-dotenv = "*"
google-generativeai = "*"
httpx = "*"
sse-starlette = "*"
pydantic-settings = "*"
openai = "^1.61.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
black = "*"
isort = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
